--- a/example/first_tests.ipynb
+++ b/example/first_tests.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/pjssilva/documentos/programas/Algecan.jl/algencan-3.1.1/lib\""
+       "\"../algencan-3.1.1/lib\""
       ]
      },
      "execution_count": 1,
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "push!(LOAD_PATH, \".\")\n",
+    "push!(LOAD_PATH, \"../src\")\n",
     "using JuMP\n",
     "import Algencan\n",
     "\n",
@@ -50,16 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solve(m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +100,120 @@
       " Output filename        =       'algencan.out'\n",
       " Solution filename      =                   ''\n",
       "\n",
+      " Number of variables               :       2\n",
+      " Number of equality constraints    :       0\n",
+      " Number of inequality constraints  :       0\n",
+      " Number of bound constraints       :       4\n",
+      " Number of fixed variables         :       0\n",
+      "\n",
+      " There are no fixed variables to be removed.\n",
+      "\n",
+      " The scaling feature was mainly developed for constrained problems. For\n",
+      " unconstrained and bound-constrained problem, please, set the optimality\n",
+      " tolerance (related to the sup-norm of the projected gradient of the\n",
+      " objective function) with a convenient value. The scaling feature is being\n",
+      " disabled.\n",
+      "\n",
+      "     Entry to GENCAN.\n",
+      "     Number of variables:       2\n",
+      "     Required optimality tolerance: 1.0D-08\n",
+      "\n",
+      "     It         function  gpsupn   xsupn stesupn   nfree   SPGit in-face    fcnt\n",
+      "      0   2.83658994D+00 2.0D+00 3.0D+00\n",
+      "      1   2.23098567D-01 4.2D-01 3.2D+00 1.5D-01       2       1       0       2\n",
+      "      2   1.71518232D-01 2.6D-02 3.2D+00 2.3D-01       2       1       1       3\n",
+      "      3   1.71358795D-01 7.6D-05 3.2D+00 1.2D-02       2       1       2       4\n",
+      "      4   1.71358793D-01 6.7D-10 3.2D+00 3.7D-05       2       1       3       5\n",
+      "\n",
+      "     Flag of GENCAN: Solution was found.\n",
+      "\n",
+      "\n",
+      " User-provided subroutines calls counters: \n",
+      "\n",
+      " Subroutine fsub     (coded=T):        5\n",
+      " Subroutine gsub     (coded=T):        6\n",
+      " Subroutine hsub     (coded=T):        3\n",
+      " Subroutine csub     (coded=F):        0 (       0 calls per constraint in avg)\n",
+      " Subroutine jacsub   (coded=F):        0 (       0 calls per constraint in avg)\n",
+      " Subroutine hcsub    (coded=F):        0 (       0 calls per constraint in avg)\n",
+      " Subroutine fcsub    (coded=F):        0\n",
+      " Subroutine gjacsub  (coded=F):        0\n",
+      " Subroutine gjacpsub (coded=F):        0\n",
+      " Subroutine hlsub    (coded=F):        0\n",
+      " Subroutine hlpsub   (coded=F):        0\n",
+      "\n",
+      "\n",
+      " Total CPU time in seconds =     0.06\n",
+      "x final [3.14564, 3.21687]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       ":Optimal"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solve(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " ==============================================================================\n",
+      " This is ALGENCAN 3.1.1.\n",
+      " ALGENCAN, an Augmented Lagrangian method for nonlinear programming, is part of\n",
+      " the TANGO Project: Trustable Algorithms for Nonlinear General Optimization.\n",
+      " See http://www.ime.usp.br/~egbirgin/tango/ for details.\n",
+      " ==============================================================================\n",
+      "\n",
+      " Processing array of parameters with   1 entrances:\n",
+      "\n",
+      " ITERATIONS-OUTPUT-DETAIL                                                     1\n",
+      "\n",
+      " The specification file is not being used.\n",
+      "\n",
+      " Available HSL subroutines = NONE           \n",
+      "\n",
+      " ALGENCAN PARAMETERS:\n",
+      "\n",
+      " firstde                =                    F\n",
+      " seconde                =                    F\n",
+      " truehpr                =                    F\n",
+      " hptype in TN           =               HAPPRO\n",
+      " lsslvr in TR           =            NONE/NONE\n",
+      " lsslvr in NW           =            NONE/NONE\n",
+      " lsslvr in ACCPROC      =            NONE/NONE\n",
+      " innslvr                =                   TN\n",
+      " accproc                =                    F\n",
+      " rmfixv                 =                    T\n",
+      " slacks                 =                    F\n",
+      " scale                  =                    T\n",
+      " epsfeas                =           1.0000D-08\n",
+      " epsopt                 =           1.0000D-08\n",
+      " efstain                =           1.0000D-04\n",
+      " eostain                =           1.0000D-12\n",
+      " efacc                  =           1.0000D-04\n",
+      " eoacc                  =           1.0000D-04\n",
+      " iprint                 =                    1\n",
+      " ncomp                  =                    6\n",
+      "\n",
+      " Specification filename =                   ''\n",
+      " Output filename        =       'algencan.out'\n",
+      " Solution filename      =                   ''\n",
+      "\n",
       " Number of variables               :       3\n",
       " Number of equality constraints    :       0\n",
       " Number of inequality constraints  :       0\n",
@@ -135,9 +240,9 @@
       "\n",
       " User-provided subroutines calls counters: \n",
       "\n",
-      " Subroutine fsub     (coded=T):        1\n",
-      " Subroutine gsub     (coded=T):        2\n",
-      " Subroutine hsub     (coded=T):        0\n",
+      " Subroutine fsub     (coded=T):       13\n",
+      " Subroutine gsub     (coded=F):        0\n",
+      " Subroutine hsub     (coded=F):        0\n",
       " Subroutine csub     (coded=F):        0 (       0 calls per constraint in avg)\n",
       " Subroutine jacsub   (coded=F):        0 (       0 calls per constraint in avg)\n",
       " Subroutine hcsub    (coded=F):        0 (       0 calls per constraint in avg)\n",
@@ -197,7 +302,7 @@
        "order to create a dynamic library try the following:\n",
        "\n",
        "```\n",
-       "gcc -shared -o libalgencan.so -Wl,--whole-archive libalgencan.a \n",
+       "gcc -shared -o libalgencan.so -Wl,--whole-archive libalgencan.a \\\n",
        "    -Wl,--no-whole-archive -lgfortran\n",
        "```\n",
        "\n",
@@ -222,7 +327,7 @@
        "order to create a dynamic library try the following:\n",
        "\n",
        "```\n",
-       "gcc -shared -o libalgencan.so -Wl,--whole-archive libalgencan.a \n",
+       "gcc -shared -o libalgencan.so -Wl,--whole-archive libalgencan.a \\\n",
        "    -Wl,--no-whole-archive -lgfortran\n",
        "```\n",
        "\n",
